dark mode implimentation done pending fixes

--- a/styles/post.module.scss
+++ b/styles/post.module.scss
@@ -50,6 +50,7 @@
         margin-bottom: 1em;
 
         button {
+          color: inherit;
           display: flex;
           border: none;
           cursor: pointer;
@@ -138,7 +139,7 @@
     padding: 2em 0;
 
     button {
-      background: $white;
+      background: inherit;
       color: $myGray;
       box-shadow: 0 10px 15px -3px rgb(0 0 0 / 10%),
         0 4px 6px -2px rgb(0 0 0 / 5%);
